styles/night.less
body {
    color: #999;
    background: #000;
}

a {
    color: #2B6FB2;
}

a.external {
    /* @embed */
    background-image: url( '../images/external-link-ltr.png' );
}

img {
    background: #fff;
}

/* Same specificity as in MFE/less/content/hacks.less */
.stable .content table.infobox {
    background: #000;
}

/* Same specificity as in MFE/less/content/hacks.less */
.content table td,
.content table th,
.content table.infobox th,
.content table.infobox td {
    border-color: rgba(128,128,128,0.12)
}

.app_table_container {
    box-shadow: none;
    border: 1px solid #202020;
    background-color: #202020;
}

.app_table_collapsed_container {
    background-color: #202020;
}

.app_table_collapsed_open {
    border-radius: 0;
}

.app_table_collapse_close {
    border-radius: 0;
}

.app_span_collapse_text {
    color: #808080;
}

.app_table_collapsed_bottom {
    background-color: #202020;
    border-radius: 0;
}

